--- a/multisla/src/main/resources/templates/index.html
+++ b/multisla/src/main/resources/templates/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
@@ -137,11 +138,12 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="navbar-menu">
                         <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
-                            <li><a href="index.html">home</a></li> 
-							<li><a href="aboutus.html">about</a></li> 							                   
-                            <li><a href="model.html">our models</a></li> 							
-                            <li><a href="blog.html">blog</a></li>                                    
-                            <li><a href="contactus.html">contact</a></li>                    
+                            <li><a href="/">home</a></li> 
+							<li><a href="#">model01</a></li> 							                   
+                            <li><a href="#">model02</a></li> 							
+                            <li><a href="#">model03</a></li> 
+                            <li><a href="#">model04</a></li>                                       
+                            <li><a href="login">LOGIN</a></li>                    
                         </ul>
                     </div><!-- /.navbar-collapse -->
                 </div>  
