--- a/multisla/src/main/resources/templates/center.html
+++ b/multisla/src/main/resources/templates/center.html
@@ -24,7 +24,7 @@
         </div><!--End off row-->
 	</div><!--End off container -->
 </section> <!--End off Home Sections-->
-<section id="hello" class="home bg-mega">
+<section id="hello" class="home2 bg-mega">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
@@ -42,7 +42,7 @@
         </div><!--End off row-->
 	</div><!--End off container -->
 </section> <!--End off Home Sections-->
-<section id="hello" class="home bg-mega">
+<section id="hello" class="home3 bg-mega">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
@@ -60,7 +60,7 @@
         </div><!--End off row-->
 	</div><!--End off container -->
 </section> <!--End off Home Sections-->
-<section id="hello" class="home bg-mega">
+<section id="hello" class="home4 bg-mega">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
