--- a/multisla/src/main/resources/templates/index.html
+++ b/multisla/src/main/resources/templates/index.html
@@ -74,7 +74,7 @@
             <!--Home page style-->
 
 
-            <nav class="navbar navbar-default navbar-fixed white no-background bootsnav text-uppercase">
+            <nav class="navbar navbar-default navbar-fixed black no-background bootsnav text-uppercase">
                 <!-- Start Top Search -->
                 <div class="top-search">
                     <div class="container">
