--- a/multisla/src/main/resources/templates/register.html
+++ b/multisla/src/main/resources/templates/register.html
@@ -1,11 +1,16 @@
-
-<html xmlns:th="http://www.thymeleaf.org">
-
-<meta charset="UTF-8">
-<title>Insert title here</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
+<style>
+	#div-top{
+		padding-top: 100px;
+	}
+</style>
+
+<script>
 function sendUid(uid){
 	$.ajax({
 		url:'/checkuid',
@@ -28,21 +33,67 @@ $(document).ready(function(){
 });
 </script>
 
-
-
-
-
-
-
-
-<form action="registerimpl" method="POST">
-ID<input class="form-control form-control-item" type="text" name="uid" id="uid">
-<span id="uspan"></span>
-<br>
-PWD<input class="form-control form-control-item" type="text" name="upwd" id="upwd"><br>
-NAME<input class="form-control form-control-item" type="text" name="uname" id="uname"><br>
-ADRESS<input class="form-control form-control-item" type="text" name="uaddr" id="uaddr"><br>
-ADRESS<input class="form-control form-control-item" type="number" name="uphone" id="uphone"><br>
-<input class="btn btn-primary btn-user btn-block"  type="submit" name="REGISTER"><br>
-</form>
-
+<div id="div-top" class="container-fluid">
+ 	<div class="col-sm-4">
+ 	</div>
+ 	<div class="col-sm-4" >
+ 		<div class="container">
+ 		<h2>계정 생성하기</h2>
+			<form class="form-horizontal" action="registerimpl" method="POST">
+				<div class="form-group">
+					<label class="control-label col-sm-2" for="id">ID: </label>
+					<div class="col-sm-3">
+		        		<input type="text" class="form-control" id="uid" name="uid">
+		      			<span id="uspan"></span>
+		      		</div>
+				</div>
+				
+				<div class="form-group">
+					<label class="control-label col-sm-2" for="pwd">Password:</label>
+		     		<div class="col-sm-3">          
+		        		<input type="password" class="form-control" id="upwd" name="upwd">
+		     		</div>
+		    	</div>
+		    	
+				
+				<div class="form-group">
+					<label class="control-label col-sm-2" for="name">Name:</label>
+		     		<div class="col-sm-3">          
+		        		<input type="text" class="form-control" name="uname" id="uname">
+		     		</div>
+		    	</div>
+		    	
+		    	<div class="form-group">
+					<label class="control-label col-sm-2" for="addr">Address:</label>
+		     		<div class="col-sm-3">          
+		        		<input type="text" class="form-control" name="uaddr" id="uaddr">
+		     		</div>
+		    	</div>
+		    	
+		    	<div class="form-group">
+					<label class="control-label col-sm-2" for="phone">Phone Number:</label>
+		     		<div class="col-sm-3">          
+		        		<input type="number" class="form-control" name="uphone" id="uphone">
+		     		</div>
+		    	</div>
+		    	
+		    	<div class="form-group">        
+		      		<div class="col-sm-offset-2 col-sm-3">
+		       			<a class="btn btn-info btn-user btn-block"  type="submit" name="register">계정생성하기</a><br>
+		      		</div>
+		    	</div>
+		    	
+		    	<div class="form-group">        
+		      		<div class="col-sm-offset-2 col-sm-3">
+		      			<hr>
+		      			<p>계정이 있으신가요?</p>
+		       			<a class="btn btn-default btn-user btn-block" href="login" name="login">로그인하러가기</a><br>
+		      		</div>
+		    	</div>
+		    	
+			</form>
+		</div>
+    </div>
+    <div class="col-sm-4">
+	</div>  
+</div>
