--- a/multisla/src/main/resources/templates/login.html
+++ b/multisla/src/main/resources/templates/login.html
@@ -33,17 +33,17 @@
 		    	</div>
 		    	<div class="form-group">        
 		      		<div class="col-sm-offset-2 col-sm-3">
-		       			<a class="btn btn-info btn-user btn-block"  type="submit" name="login">로그인</a><br>
-		      		</div>
-		    	</div>
-		    	<div class="form-group">        
-		      		<div class="col-sm-offset-2 col-sm-3">
-		      			<hr>
-		      			<p>계정이 없다면?</p>
-		       			<a class="btn btn-default btn-user btn-block" href="register" name="register">계정생성하기</a><br>
+		       			<input class="btn btn-info btn-user btn-block"  type="submit" name="login" value="로그인"><br>
 		      		</div>
 		    	</div>
 			 </form>
+			 <div class="form-group">        
+	      		<div class="col-sm-offset-2 col-sm-3">
+	      			<hr>
+	      			<p>계정이 없다면?</p>
+	       			<a class="btn btn-default btn-user btn-block" href="register" name="register">계정생성하기</a><br>
+	      		</div>
+		    </div>
 		</div>
     </div>
     <div class="col-sm-4">
