--- a/multisla/src/main/resources/templates/register.html
+++ b/multisla/src/main/resources/templates/register.html
@@ -79,20 +79,21 @@ $(document).ready(function(){
 		    	
 		    	<div class="form-group">        
 		      		<div class="col-sm-offset-2 col-sm-3">
-		       			<a class="btn btn-info btn-user btn-block"  type="submit" name="register">계정생성하기</a><br>
+		       			<input type="submit" class="btn btn-info btn-user btn-block" name="register" value="회원가입"><br>
 		      		</div>
 		    	</div>
 		    	
-		    	<div class="form-group">        
-		      		<div class="col-sm-offset-2 col-sm-3">
-		      			<hr>
-		      			<p>계정이 있으신가요?</p>
-		       			<a class="btn btn-default btn-user btn-block" href="login" name="login">로그인하러가기</a><br>
-		      		</div>
-		    	</div>
-		    	
+
 			</form>
+			<div class="form-group">        
+	      		<div class="col-sm-offset-2 col-sm-3">
+	      			<hr>
+	      			<p>계정이 있으신가요?</p>
+	       			<a class="btn btn-default btn-user btn-block" href="login" name="login">로그인하러가기</a><br>
+	      		</div>
+	    	</div>
 		</div>
+		
     </div>
     <div class="col-sm-4">
 	</div>  
