--- a/multisla/src/main/resources/templates/center.html
+++ b/multisla/src/main/resources/templates/center.html
@@ -4,76 +4,64 @@
 <title>Insert title here</title>
 
 <!--Home Sections-->
-
-
 <section id="hello" class="home bg-mega">
     <div class="overlay"></div>
     <div class="container">
-        <div class="row">
+        <div class="row" >
             <div class="main_home text-center">
                 <div class="home_text">
-                    <h4 class="text-white text-uppercase">a new creative studio</h4>
-                    <h1 class="text-white text-uppercase">good design is always in season</h1>
-
-                    <div class="separator"></div>
-
-                    <h5 class=" text-uppercase text-white"><em>One day, the dream will come true with lorem ipsum dolor sit amet, 
-                            consectetuer adipiscing elit, nummy nibh euismod tincidunt laoreet.</em></h5>
+                     <h1 class="text-white text-uppercase">MODEL1</h1>
+                     <div class="separator"></div>
+                    <button type="button" href="#" class="btn btn-primary">내 차 만들기</button>
+                    <button type="button" href="#" class="btn btn-default">자세히 알아보기</button>                
                 </div>
             </div>
         </div><!--End off row-->
 	</div><!--End off container -->
 </section> <!--End off Home Sections-->
+
+
 <section id="hello" class="home2 bg-mega">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="main_home text-center">
-                <div class="home_text">
-                    <h4 class="text-white text-uppercase">a new creative studio</h4>
-                    <h1 class="text-white text-uppercase">good design is always in season</h1>
-
-                    <div class="separator"></div>
-
-                    <h5 class=" text-uppercase text-white"><em>One day, the dream will come true with lorem ipsum dolor sit amet, 
-                            consectetuer adipiscing elit, nummy nibh euismod tincidunt laoreet.</em></h5>
+            <div class="main_home2 text-center">
+                <div class="home2_text">
+                     <h1 class="text-white text-uppercase">MODEL2</h1>
+                     <div class="separator"></div>
+                    <button type="button" href="#" class="btn btn-primary">내 차 만들기</button>
+                    <button type="button" href="#" class="btn btn-default">자세히 알아보기</button> 
                 </div>
             </div>
         </div><!--End off row-->
 	</div><!--End off container -->
 </section> <!--End off Home Sections-->
+
 <section id="hello" class="home3 bg-mega">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="main_home text-center">
-                <div class="home_text">
-                    <h4 class="text-white text-uppercase">a new creative studio</h4>
-                    <h1 class="text-white text-uppercase">good design is always in season</h1>
-
-                    <div class="separator"></div>
-
-                    <h5 class=" text-uppercase text-white"><em>One day, the dream will come true with lorem ipsum dolor sit amet, 
-                            consectetuer adipiscing elit, nummy nibh euismod tincidunt laoreet.</em></h5>
-                </div>
+            <div class="main_home3 text-center">
+                <div class="home3_text">
+                     <h1 class="text-white text-uppercase">MODEL3</h1>
+                     <div class="separator"></div>
+                    <button type="button" href="#" class="btn btn-primary">내 차 만들기</button>
+                    <button type="button" href="detail/modeldetail" class="btn btn-default">자세히 알아보기</button>                 </div>
             </div>
         </div><!--End off row-->
 	</div><!--End off container -->
 </section> <!--End off Home Sections-->
+
 <section id="hello" class="home4 bg-mega">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="main_home text-center">
-                <div class="home_text">
-                    <h4 class="text-white text-uppercase">a new creative studio</h4>
-                    <h1 class="text-white text-uppercase">good design is always in season</h1>
-
-                    <div class="separator"></div>
-
-                    <h5 class=" text-uppercase text-white"><em>One day, the dream will come true with lorem ipsum dolor sit amet, 
-                            consectetuer adipiscing elit, nummy nibh euismod tincidunt laoreet.</em></h5>
-                </div>
+            <div class="main_home4 text-center">
+                <div class="home4_text">
+                   <h1 class="text-white text-uppercase">MODEL4</h1>
+                     <div class="separator"></div>
+                    <button type="button" href="#" class="btn btn-primary">내 차 만들기</button>
+                    <button type="button" href="#" class="btn btn-default">자세히 알아보기</button>                 </div>
             </div>
         </div><!--End off row-->
 	</div><!--End off container -->
