--- a/multisla/src/main/resources/templates/index.html
+++ b/multisla/src/main/resources/templates/index.html
@@ -143,7 +143,7 @@
                     <div class="collapse navbar-collapse" id="navbar-menu">
                         <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
                             <li><a href="/">home</a></li> 
-							<li><a href="#">model01</a></li> 							                   
+							<li><a href="detail/modeldetail">model01</a></li> 							                   
                             <li><a href="#">model02</a></li> 							
                             <li><a href="#">model03</a></li> 
                             <li><a href="#">model04</a></li>                                       
