--- a/multisla/src/main/resources/static/assets/css/style.css
+++ b/multisla/src/main/resources/static/assets/css/style.css
@@ -373,7 +373,7 @@ Button
     -webkit-transition: all 0.6s;
     transition: all 0.6s;
     text-transform: uppercase;
-    font-size:14px;
+    font-size:15px;
     font-weight: 600;
     border-radius: 0;
     /*border:1px solid;*/
@@ -387,14 +387,14 @@ Button
 .btn-default{
     border: 2px solid;
     border-color:#000000;
-    background-color: transparent;
+    background-color: rgba(142, 147, 163, 0.6);
     color:#000000;
     padding:0.8rem 2.5rem;
     border-radius: 30px;;
 }
 .btn-default:hover{
-    border-color:#ee997b;
-    background-color: #ee997b;
+    border-color:#8E93A3;
+    background-color: #8E93A3;
 }
 
 .btn-primary{
@@ -406,8 +406,8 @@ Button
     border-radius: 30px;
 }
 .btn-primary:hover{
-    background-color: #ee997b;
-    border-color: #ee997b;
+    background-color: #8E93A3;
+    border-color: #8E93A3;
     color:#fff;
 }
 
@@ -946,7 +946,7 @@ Home Section style
 
 .main_home{
     overflow: hidden;
-    padding-top: 500px;
+    padding-top: 600px;
     padding-bottom: 230px;
     position: relative;
     z-index: 1;
@@ -969,7 +969,7 @@ Home Section style
 
 .main_home2{
     overflow: hidden;
-    padding-top: 500px;
+    padding-top: 600px;
     padding-bottom: 230px;
     position: relative;
     z-index: 1;
@@ -994,7 +994,7 @@ Home Section style
 
 .main_home3{
     overflow: hidden;
-    padding-top: 500px;
+    padding-top: 600px;
     padding-bottom: 230px;
     position: relative;
     z-index: 1;
@@ -1018,7 +1018,7 @@ Home Section style
 
 .main_home4{
     overflow: hidden;
-    padding-top: 500px;
+    padding-top: 600px;
     padding-bottom: 230px;
     position: relative;
     z-index: 1;
