--- a/multisla/src/main/resources/templates/index.html
+++ b/multisla/src/main/resources/templates/index.html
@@ -90,11 +90,11 @@
                 <div class="container">    
                     <!-- Start Atribute Navigation -->
                     <div class="attr-nav">
-                        <ul th:if="${session.loginusers == null}">
+                        <ul class="nav navbar-nav navbar-right"  th:if="${session.loginusers == null}">
                             <li><a th:href="login">LOGIN</a></li>   
                             <li><a th:href="register">REGISTER</a></li> 
                         </ul>
-                        <ul th:unless="${session.loginusers == null}">  
+                        <ul class="nav navbar-nav navbar-right" th:unless="${session.loginusers == null}">  
                         	<li><a th:href="logout">lOGUT</a></li>   
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
