--- a/multisla/src/main/resources/templates/detail/modeldetail.html
+++ b/multisla/src/main/resources/templates/detail/modeldetail.html
@@ -1,4 +1,4 @@
-<!doctype html>
+
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <meta charset="UTF-8">
 <title>Insert title here</title>
@@ -11,6 +11,18 @@
 	}
 	.modelsperformance{
 		background: url(assets/images/model/Model-S-Performance-Hero-Desktop-LHD.jpg) no-repeat top center;
+	}
+	.modelsexterior{
+		background: url(assets/images/model/Model-S-Exterior-Hero-Desktop-Global.jpg) no-repeat top center;
+	}
+	.modelsexteriora{
+		background: url(assets/images/model/Model-S-Exterior-Grid-A-Desktop-Global.jpg) no-repeat top center;
+	}
+	.modelsexteriorb{
+		background: url(assets/images/model/Model-S-Exterior-Grid-B-Desktop-Global.jpg) no-repeat top center;
+	}
+	.modelsexteriorc{
+		background: url(assets/images/model/Model-S-Exterior-Grid-C-Desktop-Global.jpg) no-repeat top center;
 	}
 </style>
 
@@ -290,34 +302,397 @@
         <div class="row">
             <div class="main_home text-center">
                 <div class="home_text">
-                    <h4 class="text-white text-uppercase">a new creative studio</h4>
-                    <h1 class="text-white text-uppercase">good design is always in season</h1>
-
-                    <div class="separator"></div>
-
-                    <h5 class=" text-uppercase text-white"><em>One day, the dream will come true with lorem ipsum dolor sit amet, 
-                            consectetuer adipiscing elit, nummy nibh euismod tincidunt laoreet.</em></h5>
                 </div>
             </div>
+            <div class="main_counter text-center">
+			    <div class="col-md-4">
+			        <div class="counter_item">
+			            <h2 class="statistic-counter" style="color: white;"><em>483</em></h2>
+			            <h2 style="color: white;">km</h2>
+			            <div class="separator_small"></div>
+			            <h5>주행 가능 거리</h5>
+			        </div>
+			    </div>
+			    <div class="col-md-4">
+			        <div class="counter_item sm-m-top-40">
+			            <h2 class="statistic-counter" style="color: white;"><em>2.1</em></h2>
+			            <h2 style="color: white;">sec</h2>
+			            <div class="separator_small"></div>
+			            <h5>0-100 km/h*</h5>
+			        </div>
+			    </div>
+			    <div class="col-md-4">
+			        <div class="counter_item sm-m-top-40">
+			            <h2 class="statistic-counter" style="color: white;"><em>322</em></h2>
+			            <h2 style="color: white;">km/h</h2>
+			            <div class="separator_small"></div>
+			            <h5>최고속도†</h5>
+			        </div>
+			    </div>
+			</div>
         </div><!--End off row-->
 	</div><!--End off container -->
 </section> <!--End off Home Sections-->
-<section id="hello" class="home4 bg-mega">
+
+<hr />
+<br />
+<br />
+<br />
+<div class="row">
+	<div class="main_blog_fashion"></div>
+	<div class="col-md-3"></div>
+	<div class="col-md-6">
+		<div class="blog_fashion_left">
+			<div class="blog_fashion_content">
+			    <ol class="breadcrumb">
+			        <li><a href="#" class="text-black">Plaid</a></li>
+			    </ol>
+			    <h2>루디크러스를 넘어</h2>
+			    <p>Model S Plaid는 현존하는 양산 차량 중 가장 빠른 가속력을 자랑하는 차량 중 하나입니다. 모든 Model S는 업데이트된 배터리 구조를 통해 반복적인 트랙 주행에도 성능 저하가 일어나지 않습니다.</p>
+			
+			
+			    <a href="blog-details.html" class="btn btn-default m-top-20">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-3"></div>
+</div>
+
+<!--Simple Section-->
+<section id="simple" class="simple bg-grey roomy-80">
+    <div class="container">
+        <div class="row">
+            <div class="main_simple text-center">
+                <div class="col-md-12">
+                    <h2>전기 파워트레인</h2>
+                    <p>Model S의 플랫폼은 배터리 테크놀로지와 통합된 파워트레인으로 타의 추종을 불허하는 압도적인 성능, 주행 가능 거리 및 효율성을 발휘하도록 설계되었습니다. 더 효율적인 열 관리가 가능하도록 새롭게 설계된 배터리 모듈과 팩은 더욱 빠른 충전과 모든 조건에서 한층 더 높은 출력 및 내구성을 제공합니다.</p>
+				</div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--Gallery Section-->
+<section id="gallery" class="gallery margin-top-120 bg-grey">
+    <!-- Gallery container-->
+    <div class="container">
+        <div class="row">
+            <div class="main-gallery roomy-80">
+                <div class="col-md-12 m-bottom-60">
+                    <div class="filters-button-group text-center sm-text-center">
+                    	<button class="button is-checked" data-filter="*">View all</button>
+                        <button class="button" data-filter=".models">Model S</button>
+                        <button class="button" data-filter=".modelsplaid">Model S Plaid</button>
+                    </div>
+                </div>
+
+                <div style="clear: both;"></div>
+
+                <div class="grid text-center">
+                    <div class="grid-item models" style="width: 800px;">
+                        <img src="assets/images/model/model-s-performance-dual-motor-desktop_carousel-new.jpg" width="800px">
+                        <div class="grid_hover_area text-center">
+                            <div class="grid_hover_text m-top-50">
+                                <h4 class="text-white">Model S</h4>
+                            </div>
+                        </div><!-- End off grid Hover area -->
+                        <h3>Model S Plaid</h3>
+                        <p>토크 벡터링 및 3개의 독립적인 카본 슬리브 로터를 갖춘 트라이 모터 AWD로 322km/h까지 1,000마력 이상을 유지합니다.</p>
+                        <div class="main_counter text-center">
+							<div class="col-md-4">
+								<div class="counter_item">
+									<h2 class="statistic-counter" style="font-size: 30px;"><em>2.1</em></h2>
+									<h2 style="font-size: 30px;">sec</h2>
+									<div class="separator_small"></div>
+									<h5>0-100 km/h</h5>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="counter_item">
+									<h2 class="statistic-counter" style="font-size: 30px;"><em>483</em></h2>
+									<h2 style="font-size: 30px;">km</h2>
+									<div class="separator_small"></div>
+									<h5>주행 가능 거리</h5>
+								</div>
+							</div>
+						</div>
+					</div><!-- End off grid item -->
+
+
+                    <div class="grid-item modelsplaid" style="width: 800px;">
+                    	<div class="row">
+	                        <img src="assets/images/model/model-s-performance-tri-motor-desktop_carousel-new.jpg" width="800px">
+	                        <div class="grid_hover_area text-center">
+	                            <div class="grid_hover_text m-top-50">
+	                                <h4 class="text-white">Model S Plaid</h4>
+	                            </div>
+	                        </div><!-- End off grid Hover area -->
+	                        <h3>Model S</h3>
+	                        <p>듀얼 모터 상시 사륜구동(AWD)은 강력한 출력과 최적의 제어를 통해 획기적인 주행가능 거리를 제공합니다.</p>
+							<div class="main_counter text-center">
+								<div class="col-md-4">
+									<div class="counter_item">
+										<h2 class="statistic-counter" style="font-size: 30px;"><em>3.2</em></h2>
+										<h2 style="font-size: 30px;">sec</h2>
+										<div class="separator_small"></div>
+										<h5>0-100 km/h</h5>
+									</div>
+								</div>
+								<div class="col-md-4">
+									<div class="counter_item">
+										<h2 class="statistic-counter" style="font-size: 30px;"><em>526</em></h2>
+										<h2 style="font-size: 30px;">km</h2>
+										<div class="separator_small"></div>
+										<h5>주행 가능 거리</h5>
+									</div>
+								</div>
+							</div>
+                        </div>
+                    </div><!-- End off grid item -->
+                </div>
+
+                <div style="clear: both;"></div>
+
+            </div>
+        </div>
+    </div><!-- Portfolio container end -->
+</section><!-- End off portfolio section -->
+
+<section id="hello" class="modelsexterior bg-mega">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
             <div class="main_home text-center">
                 <div class="home_text">
-                    <h4 class="text-white text-uppercase">a new creative studio</h4>
-                    <h1 class="text-white text-uppercase">good design is always in season</h1>
-
-                    <div class="separator"></div>
-
-                    <h5 class=" text-uppercase text-white"><em>One day, the dream will come true with lorem ipsum dolor sit amet, 
-                            consectetuer adipiscing elit, nummy nibh euismod tincidunt laoreet.</em></h5>
                 </div>
             </div>
         </div><!--End off row-->
 	</div><!--End off container -->
 </section> <!--End off Home Sections-->
+
+<hr />
+<br />
+<br />
+<br />
+<br />
+<div class="row">
+	<div class="main_blog_fashion"></div>
+	<div class="col-md-3"></div>
+	<div class="col-md-6">
+		<div class="blog_fashion_left">
+			<div class="blog_fashion_content">
+			    <h3>외부</h3>
+			    <h2>효율성을 위한 설계</h2>
+			    <p>Model S는 0.208 Cd에 불과한 공기저항 계수를 자랑하며 속도, 내구성 및 주행 가능 거리를 위해 설계되었습니다. 향상된 공기역학 성능과 더 넓어진 차체는 더 빠른 응답성을 발휘하여 운전자가 더 빠르고 자신 있게 코너를 주행할 수 있습니다.</p>
+			
+			
+			    <a href="blog-details.html" class="btn btn-default m-top-20">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-3"></div>
+</div>
+
+<!--Our Work Section-->
+<div class="container">
+    <div class="row">
+        <div class="main_work">
+
+            <div class="col-md-7 col-md-offset-5 col-sm-12 col-xs-12">
+                <div class="work_item">
+                    <div class="row">
+                        <div class="col-md-7 col-sm-12 col-xs-12 text-right pull-right sm-text-center">
+                            <div class="work_item_img">
+                                <img src="assets/images/model/Model-S-Exterior-Grid-A-Desktop-Global.jpg" alt="" />
+                            </div>
+                        </div>
+                        <div class="col-md-5 col-sm-12 col-xs-12 text-right pull-left sm-text-center">
+                            <div class="work_item_details m-top-80 sm-m-top-20">
+                                <h4>지치지 않는 성능</h4>
+                                <div class="work_separator1"></div>
+                                <p class="m-top-40 sm-m-top-10">뛰어난 성능의 퍼포먼스 휠과 타이어는 차량의 접지력을 향상시켜 더 강한 출력을 도로에 전달하는데 도움을 줍니다.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- End off work-item -->
+
+			<div class="col-md-7 col-sm-12 col-xs-12">
+			    <div class="work_item">
+			        <div class="row">
+			            <div class="col-md-7 col-sm-12 col-xs-12">
+			                <div class="work_item_img sm-text-center sm-m-top-40">
+ 		                    	<img src="assets/images/model/Model-S-Exterior-Grid-B-Desktop-Global.jpg" alt="" />
+			                </div>
+			            </div>
+			            <div class="col-md-5 col-sm-12 col-xs-12 text-left pull-left sm-text-center">
+			                <div class="work_item_details m-top-80 sm-m-top-20">
+			                    <h4>최적화된 공기역학</h4>
+			                    <div class="work_separator2"></div>
+			                    <p class="m-top-40 sm-m-top-10">모든 부분의 디테일을 고려한 외관 디자인으로 Model S는 가장 공기역학적으로 설계된 차량 중 하나입니다.</p>
+			                </div>
+			            </div>
+			        </div>
+			
+			    </div>
+			</div><!-- End off work-item -->
+
+			<div class="col-md-7 col-md-offset-5 col-sm-12 col-xs-12">
+			    <div class="work_item">
+			        <div class="row">
+			            <div class="col-md-7 col-sm-12 col-xs-12 text-right pull-right sm-text-center">
+			                <div class="work_item_img sm-m-top-40">
+			                    <img src="assets/images/model/Model-S-Exterior-Grid-C-Desktop-Global.jpg" alt="" />
+			                </div>
+			            </div>
+			            <div class="col-md-5 col-sm-12 col-xs-12 text-right pull-left sm-text-center">
+			                <div class="work_item_details m-top-80 sm-m-top-20">
+			                    <h4>정제된 디자인</h4>
+			                    <div class="work_separator1"></div>
+			                    <p class="m-top-40 sm-m-top-10">아이코닉한 실루엣과 참신하고 우아한 비율의 만남</p>
+			                </div>
+			            </div>
+			        </div>
+			    </div>
+			</div><!-- End off work-item -->
+
+        </div>
+    </div>
+</div>
+<!-- End off Our Work Section-->
+
+<!--About Sections-->
+<section id="feature" class="feature p-top-100">
+	<div class="container">
+		<div class="row">
+			<div class="main_feature">
+			
+				<div class="col-md-3 m-top-10">
+					<!-- Head Title -->
+					<div class="head_title">
+						<h5><em>주행 가능 거리</em></h5>
+						<h2>자유로운 장거리 여행</h2>
+						<div class="separator_left"></div>
+					</div><!-- End off Head Title -->
+				
+					<div class="feature_content wow fadeIn m-top-40">
+						<h5>최대 526km‡의 주행 가능 거리 및 전 세계 고속 충전 네트워크를 통해 충전시간은 줄어들고 도로 위의 주행 시간은 늘어날 것입니다.</h5>
+						
+						<p>‡표시된 주행 가능 거리는 속도, 기상 조건 및 도로 상태 등의 외부 요인에 따라 달라질 수 있습니다.</p>
+						
+						<p>**표시된 수치는 V3 수퍼차저 충전 기준이며, 수퍼차저의 종류, 배터리 컨디션 및 외부 온도 등에 따라 충전시간과 주행 가능 거리는 달라질 수 있습니다.</p>
+						<div class="feature_btns m-top-30">
+							<a href="" class="btn btn-default text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-9">
+					<div class="feature_photo wow fadeIn sm-m-top-40">
+						<div class="feature_img">
+							<video loop autoplay width="900px" preload="auto" muted controls>
+								<source src="https://www.tesla.com/sites/default/files/videos/Plaid-Range-Web-Desktop-8mb.mp4">
+							</video>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div><!--End off row-->
+	</div><!--End off container -->
+</section>
+
+<!--Testimonial Section-->
+<section id="testimonial" class="testimonial fix roomy-100">
+    <div class="container">
+        <div class="row">
+            <div class="main_testimonial text-center">
+
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active testimonial_item">
+                            <div class="col-sm-10 col-sm-offset-1">
+
+                                <div class="test_authour">
+<!--                                <img class="img-circle" src="assets/images/test-img.jpg" alt="" /> -->
+									<div class="work_item_img sm-text-center sm-m-top-40">
+										<video loop autoplay width="900px" preload="auto" muted controls>
+											<source src="https://tesla-cdn.thron.com/delivery/public/video/tesla/9a153db3-198b-4502-98bc-3bc6041597fd/bvlatuR/WEBHD/model-s-interior-carousel-1-cinematic-display-desktop-global">
+										</video>
+									</div>
+                                    <h6 class="m-top-20">시네마틱 경험</h6>
+                                </div>
+
+                                <p class=" m-top-40">좌우 각도 조절 기능이 있는 17인치 터치스크린은 2200 x 1300의 고해상도 트루 컬러(True color) 지원 및 게임 및 영화 등을 위한 탁월한 반응성을 제공합니다.<br><br></p>
+
+
+                            </div>
+                        </div>
+                        <div class="item testimonial_item">
+                            <div class="col-sm-10 col-sm-offset-1">
+
+                                <div class="test_authour">
+                                    <div class="work_item_img sm-text-center sm-m-top-40">
+										<video loop autoplay width="900px" preload="auto" muted controls>
+											<source src="https://tesla-cdn.thron.com/delivery/public/video/tesla/c39b1f9b-dfe6-4e45-a0d7-0156ff7d2706/bvlatuR/WEBHD/MS-Interior-Carousel-2-Yoke-Desktop">
+										</video>
+									</div>
+                                    <h6 class="m-top-20">요크 스티어링 휠</h6>
+                                </div>
+
+                                <p class=" m-top-40">대담하고 새로운 접근 방식으로서 전방 도로를 한눈에 볼 수 있는 것 뿐만 아니라, Model S와 운전자 간의 진정한 커넥션이 가능해지며, 이를 통해 스티어링 감각이 향상됩니다. 브레이크를 밟으면 Model S가 주행 방향을 선택을 도와 여정을 시작할 수 있습니다.</p>
+
+
+                            </div>
+                        </div>
+                        <div class="item testimonial_item">
+                            <div class="col-sm-10 col-sm-offset-1">
+
+                                <div class="test_authour">
+                                    <div class="work_item_img sm-text-center sm-m-top-40">
+										<video loop autoplay width="900px" preload="auto" muted controls>
+											<source src="https://tesla-cdn.thron.com/delivery/public/video/tesla/ac921a72-b7e7-404b-9acc-373a02ef2869/bvlatuR/WEBHD/MS-Interior-Carousel-3-Environment-Desktop">
+										</video>
+									</div>
+                                    <h6 class="m-top-20">완벽한 주행 환경</h6>
+                                </div>
+
+                                <p class=" m-top-40">실내 전체에 걸쳐 숨겨져 있는 송풍구와 3존 온도 제어, 통풍 시트 및 HEPA 필터 시스템이 완벽한 실내 환경을 제공합니다.<br><br><br></p>
+
+                            </div>
+                        </div>
+                        <div class="item testimonial_item">
+                            <div class="col-sm-10 col-sm-offset-1">
+
+                                <div class="test_authour">
+                                    <div class="work_item_img sm-text-center sm-m-top-40">
+										<video loop autoplay width="900px" preload="auto" muted controls>
+											<source src="https://tesla-cdn.thron.com/delivery/public/video/tesla/ce17484f-f941-4040-92b3-cc2a1564a6ff/bvlatuR/WEBHD/MS-Interior-Carousel-4-Rear-Seats-Desktop">
+										</video>
+									</div>
+                                    <h6 class="m-top-20">새롭게 설계된 2열 좌석</h6>
+                                </div>
+
+                                <p class=" m-top-40">3명의 성인을 위한 좌석, 여분의 레그룸 및 헤드룸, 무선 충전과 수납이 가능한 접이식 팔걸이를 갖췄습니다.<br><br><br></p>
+
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                    <span class="fa fa-long-arrow-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <span class="slash">/</span>
+                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                    <span class="fa fa-long-arrow-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+
+            </div>
+        </div>
+    </div><!--End off row-->
+</div><!--End off container -->
+</section> <!--End off Testimonial section -->
+
 </html>
