--- a/multisla/src/main/resources/templates/index.html
+++ b/multisla/src/main/resources/templates/index.html
@@ -97,7 +97,7 @@
                         <ul class="nav navbar-nav navbar-right" th:unless="${session.loginusers == null}">  
                         	<li><a th:href="logout">lOGUT</a></li>   
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
+                                <a href="garage" class="dropdown-toggle" data-toggle="dropdown" >
                                     <i class="fa fa-shopping-bag"></i>
                                     <span class="badge">3</span>
                                 </a>
