--- a/multisla/src/main/resources/templates/garage/garage.html
+++ b/multisla/src/main/resources/templates/garage/garage.html
@@ -1,3 +1,9 @@
+<meta charset="utf-8">
+
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
             <!--Portfolio Section-->
             <section id="gallery" class="gallery margin-top-120 bg-white">
                 <!-- Portfolio container-->
@@ -15,11 +21,39 @@
                             </div>
 
                             <div style="clear: both;"></div>
+				
+				             	<table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                	<thead>
+					                    <tr>
+					                        <th>GID</th>
+					                        <th>CODENO</th>
+					                        <th>UID</th>
+					                        <th>MID</th>
 
+					                    </tr>
+					                </thead>
+                                	<tbody>
+                                	<tr th:each="u : ${ugarage}">
+                                			<th th:text="${u.gid}">gid</th>
+					                        <th th:text="${u.codeno}">codeno</th>
+					                        <th th:text="${u.uid}">uid</th>
+					                        <th th:text="${u.mid}">mid</th>
+                                	</tr>
+                                	</tbody>
+                                	</table>
+                                	
+                                	
+                            <!--
+                             각각의 codeno 이미지를 each로 돌리고
+                             view detail을 누르면 gid의 garagedetail 페이지로 이동
+                             
+                             -->
                             <div class="grid models text-center">
-                                <div class="grid-item model-item transition metal ium">
+                            	<!--  div th:each="u : ${ugarage}" class="'grid-item model-item transition'+${u.mid}" -->
+                                <div th:each="u : ${ugarage}" class="grid-item model-item transition metal ium" >
                                     <img alt="" src="assets/images/model/1.jpg">
-									<a href="model-details.html" class="btn btn-default m-top-20">View Details<i class="fa fa-long-arrow-right"></i></a>
+									<a th:href="@{garagedetail(gid=${u.gid})}" class="btn btn-default m-top-20">View Details<i class="fa fa-long-arrow-right"></i></a>
+                   				<!-- th:src="@{'assets/imges/model/'+${u.codeno}'.jpg'}" -->
                                 </div><!-- End off grid item -->
 
                                 <div class="grid-item model-item metalloid " >
