--- a/multisla/src/main/resources/static/assets/css/style.css
+++ b/multisla/src/main/resources/static/assets/css/style.css
@@ -1923,4 +1923,16 @@ Blog Details Page
 }
 
 
+/*
+Multisla- Kayoung Jin
 
+*/
+
+#div-top{
+	padding-top: 100px;
+}
+
+.selectbox{
+	margin-top: 50px;
+	margin-bottom: 250px;
+}
