--- a/multisla/src/main/resources/templates/center.html
+++ b/multisla/src/main/resources/templates/center.html
@@ -12,7 +12,7 @@
                 <div class="home_text">
                      <h1 class="text-white text-uppercase">MODEL1</h1>
                      <div class="separator"></div>
-                    <button type="button" href="#" class="btn btn-primary">내 차 만들기</button>
+                    <button type="button" onClick="location.href='/carbuild'" class="btn btn-primary">내 차 만들기</button>
                     <button type="button" href="#" class="btn btn-default">자세히 알아보기</button>                
                 </div>
             </div>
@@ -46,7 +46,7 @@
                      <h1 class="text-white text-uppercase">MODEL3</h1>
                      <div class="separator"></div>
                     <button type="button" href="#" class="btn btn-primary">내 차 만들기</button>
-                    <button type="button" href="detail/modeldetail" class="btn btn-default">자세히 알아보기</button>                 </div>
+                    <button type="button" href="#" class="btn btn-default">자세히 알아보기</button>                 </div>
             </div>
         </div><!--End off row-->
 	</div><!--End off container -->
