--- a/multisla/src/main/resources/templates/carbuild.html
+++ b/multisla/src/main/resources/templates/carbuild.html
@@ -49,7 +49,9 @@
 		
 		<!-- 옵션 선택 폼 -->
 		<form class="select-options">
-
+			<div class="selectbox">
+				<div class="button"></div>
+			</div>
 			<!-- 색상 -->
 			<div class="selectbox">
 	     		<div class="tittle-margin">
