--- a/multisla/src/main/resources/templates/carbuild/carbuild.html
+++ b/multisla/src/main/resources/templates/carbuild/carbuild.html
@@ -34,7 +34,7 @@ $(document).ready(function(){
 <div id="div-top" class="container-fluid">
   <div class="row">
     <div class="col-sm-9" style="background-color:yellow;">
-      <p>ddddd..</p>
+      <p>ddddd.dd.</p>
     </div>
     
     <!-- detail 선택 후 주문하기 -->
