--- a/multisla/src/main/resources/static/assets/css/style.css
+++ b/multisla/src/main/resources/static/assets/css/style.css
@@ -1936,3 +1936,9 @@ Multisla- Kayoung Jin
 	margin-top: 50px;
 	margin-bottom: 250px;
 }
+
+
+.selectbox2{
+	margin-top: 250px;
+	margin-bottom: 50px;
+}
