--- a/multisla/src/main/resources/templates/detail/modelYdetail.html
+++ b/multisla/src/main/resources/templates/detail/modelYdetail.html
@@ -28,6 +28,13 @@
 	.modelsautopilot{
 		background: url(assets/images/model/Autopilot-Hero-Vision-Desktop.jpg) no-repeat top center;
 	}
+	
+	h5 {
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    color:white;
+    margin-bottom: 10px;
+}
 </style>
 
 <div style="background-color: black;">
@@ -36,78 +43,80 @@
 	    <div class="overlay"></div>
 	    <div class="container">
 	        <div class="row">
-				<h1 class="text-black text-center" style="margin-top: 150px">Model Y</h1>
+				<h1 class="feature_photo wow fadeInUp text-black text-center" style="margin-top: 150px">Model Y</h1>
 	            <div class="main_home text-center">
 	                <div class="home_text">
 	                </div>
 	            </div>
 				<div class="main_counter text-center">
-				    <div class="col-md-3">
+				    <div class="feature_photo wow fadeInUp col-md-3">
 				        <div class="counter_item">
-				            <h2 class="statistic-counter" style="color: white;"><em>511km</em></h2>
+				            <h2 style="color: white;"><em>511km</em></h2>
 				            <div class="separator_small"></div>
 				            <h5 style="color: white;">주행 가능 거리</h5>
 				        </div>
 				    </div>
-				    <div class="col-md-3">
+				    <div class="feature_photo wow fadeInUp col-md-3">
 				        <div class="counter_item">
-				            <h2 class="statistic-counter" style="color: white;"><em>2,100 &#43;</em></h2>
+				            <h2 style="color: white;"><em>2,100 &#43;</em></h2>
 				            <div class="separator_small"></div>
 				            <h5 style="color: white;">적재공간(리터)</h5>
 				        </div>
 				    </div>
-				    <div class="col-md-3">
+				    <div class="feature_photo wow fadeInUp col-md-3">
 				        <div class="counter_item">
-				            <h2 class="statistic-counter" style="color: white;"><em>AWD</em></h2>
+				            <h2 style="color: white;"><em>AWD</em></h2>
 				            <div class="separator_small"></div>
 				            <h5 style="color: white;">듀얼모터</h5>
 				        </div>
 				    </div>
-				    <div class="col-md-3">
+				    <div class="feature_photo wow fadeInUp col-md-3">
 				        <div class="pricing_btn m-top-20">
 		                    <a href="/carbuild" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 		                </div>
 				    </div>
-				</div>
-				
+				</div>				
 	        </div><!--End off row-->
+	        	<div class="main_counter text-center m-top-10">
+					<p style="color:white;">표시된 주행 가능 거리는 속도, 기상 조건 및 도로 상태 등 외부 요인에 따라 달라질 수 있습니다.</p>
+				</div>
 		</div><!--End off container -->
 	</section> <!--End off Home Sections-->
 </div>
 
 <!--Safety Sections-->
 <section id="hello" class="modely">
-	<div class="col-md-8">
-      		<img src="assets/images/model/model-y-safety.avif" >	        		
-      	</div>
-      	<div class="col-md-4">
-      		<div style="margin: 50px;">
-       		<div style="margin-top: 50px;">
+	<div class="feature_photo wow fadeInLeft col-md-8">
+      	<img src="assets/images/model/model-y-safety.avif" >
+    </div>
+    <div class="feature_photo wow fadeInUp col-md-4">
+    	<div style="margin: 50px;">
+	     	<div style="margin-top: 50px;">
 				<h2 class="text-black">안전을 위한 설계</h2>
-            </div>
-            <div style="margin-top: 50px;">
+	        </div>
+	        <div style="margin-top: 50px;">
 				<p class="text-black">안전은 모든 Multisla에서 가장 중요한 부분입니다. Multisla는 차량의 안전성을 최대한 보장할 수 있도록 설계합니다.<br><br>
 				<b>별 5개 등급</b><br>
 				Model Y는 모든 범주 및 하위 범주에서 NHTSA 별 5개 안전 등급을 달성했습니다.<br><br>
 				<b>Top Safety Pick+</b><br>
 				Model Y는 모든 충돌 내구성 및 전면 충돌 방지 범주에서 최고 등급으로 IIHS Top Safety Pick+를 수상했습니다.</p>
-            </div>		            	
-            <div class="selectbox2">
-	        <div class="pricing_btn m-top-20">
-                   <a href="/carbuild" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
-               </div>
-            </div>
-      		</div>
-		</div>
+	       </div>		            	
+	       <div class="selectbox2">
+		       <div class="pricing_btn m-top-20">
+		             <a href="/carbuild" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+		        </div>
+	       </div>
+    	</div>
+	</div>
 </section> <!--End off Safety Sections-->
 	
 	<!--Utility Sections-->
 <section id="hello" class="modely">
 
-			<div class="col-md-8">
+			<div class="feature_photo wow fadeInDown col-md-8">
         		<img src="assets/images/model/Model-Y-Utility.jpg" >	        		
         	</div>
-        	<div class="col-md-4">
+        	<div class="feature_photo wow fadeInUp col-md-4">
         		<div style="margin: 50px;">
 	        		<div style="margin-top: 50px;">
 						<h2 class="text-black">모두를 위한 공간</h2>
@@ -126,14 +135,16 @@
 
 <!--Dual Motor Sections-->
 <section id="hello" class="modely">
-  <img src="assets/images/model/model-y.jpg" >
-  <br />
-  <br />
-  <br />
+	<div class="feature_photo wow fadeInDown">
+	  <img src="assets/images/model/model-y.jpg" >
+	</div>	
+	<br />
+	<br />
+	<br />
 	<div class="row">
 		<div class="main_blog_fashion"></div>
 		<div class="col-md-3"></div>
-		<div class="col-md-6">
+		<div class="feature_photo wow fadeInUp col-md-6">
 			<div class="col-md-4">  
 				<h2>듀얼 모터</h2>
 				<div class="pricing_btn m-top-40">
@@ -161,7 +172,7 @@
 					</div>
 				</div>
 				
-				<div class="col-md-5">
+				<div class="feature_photo wow fadeInRight col-md-5">
 		      		<div style="margin: 50px;">
 			       		<div style="margin-top: 50px;">
 							<h2 class="text-black">자유로운 장거리 여행</h2>
@@ -184,110 +195,111 @@
 </section><!--End off Cruise -->
 
 <!-- Auto Pilot Section-->
-<section id="feature" class="feature p-top-100">
-	<div class="container">
-		<div class="row">
-			<div class="service_content_area">
-				<!-- Service LEFT SIDE -->
-				<div class="col-md-4 service_left wow fadeInLeft">
-					<!-- Service -->
-					<div class="service_items">
-						<div class="row">
-						
-							<!-- ICON -->
-							<div class="col-xs-3">
-								<div class="hexagon">
-									<div class="about-content">
-										<span class="fa fa-leaf"></span>
-									</div>    
-								</div>
-							</div>
-						
-							<div class="col-xs-9">
-								<div class="text-left service_left_text">
-									<h4 class="main-color">360°</h4>
-									<p>후방, 측방 및 전방 카메라가 최대의 가시성 제공</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- end Single Service item -->
+<section id="feature" class="modely">
+	<div class="service_content_area">
+		<!-- Service LEFT SIDE -->
+		<div class="col-md-4 service_left wow fadeInLeft">
+			<!-- Service -->
+			<div class="selectbox2">
+			<div class="service_items">
+				<div class="row">
 				
-					<!-- Service -->
-					<div class="service_items">
-						<div class="row">
-							<!-- ICON -->
-							<div class="col-xs-3">
-								<div class="hexagon">
-									<div class="about-content">
-										<span class="fa fa-diamond"></span>
-									</div>    
-								</div>
-							</div>
-						
-							<div class="col-xs-9">
-								<div class="text-left service_left_text">
-					                <h4 class="main-color">250 m</h4>
-					                <p>최대 250 미터 범위에서의 강력한 시각적 처리</p>
-								</div>
-							</div>
+					<!-- ICON -->
+					<div class="col-xs-3">
+						<div class="hexagon">
+							<div class="about-content">
+								<span class="fa fa-leaf"></span>
+							</div>    
 						</div>
 					</div>
-					<!-- end Single Service item -->
 				
-					<!-- Service -->
-					<div class="service_items">
-						<div class="row">
-							<!-- ICON -->
-							<div class="col-xs-3">
-								<div class="hexagon">
-									<div class="about-content">
-										<span class="fa fa-android"></span>
-									</div>    
-								</div>
-							</div>
-						
-							<div class="col-xs-9">
-								<div class="text-left service_left_text">
-									<h4 class="main-color">안전</h4>
-									<p>Tesla 비전은 주변 차량 감지, 잠재적 충돌 방지 및 주차 보조 기능을 제공합니다.</p>
-								</div>
-							</div>
+					<div class="col-xs-9">
+						<div class="text-left service_left_text">
+							<h2 class="main-color">360°</h2>
+							<p>후방, 측방 및 전방 카메라가 최대의 가시성 제공</p>
 						</div>
-					</div>
-					<!-- end Single Service item -->
-				</div>
-				<!-- /END Service LEFT -->
-			
-				<!-- PHONE IMAGE -->
-				<div class="col-md-8 sm-m-top-40 sm-text-center">
-					<div class="service-img wow bounceIn">
-						<img src="assets/images/model/Autopilot-Hero-Vision-Desktop.jpg" alt="Architect Img">
 					</div>
 				</div>
 			</div>
-		</div> <!--End off row -->
+			<!-- end Single Service item -->
+		
+			<!-- Service -->
+			
+			<div class="service_items">
+				<div class="row">
+					<!-- ICON -->
+					<div class="col-xs-3">
+						<div class="hexagon">
+							<div class="about-content">
+								<span class="fa fa-diamond"></span>
+							</div>    
+						</div>
+					</div>
+				
+					<div class="col-xs-9">
+						<div class="text-left service_left_text">
+			                <h2 class="main-color">250 m</h2>
+			                <p>최대 250 미터 범위에서의 강력한 시각적 처리</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- end Single Service item -->
+		
+			<!-- Service -->
+			<div class="service_items">
+				<div class="row">
+					<!-- ICON -->
+					<div class="col-xs-3">
+						<div class="hexagon">
+							<div class="about-content">
+								<span class="fa fa-android"></span>
+							</div>    
+						</div>
+					</div>
+				
+					<div class="col-xs-9">
+						<div class="text-left service_left_text">
+							<h4 class="main-color">안전</h4>
+							<p>Tesla 비전은 주변 차량 감지, 잠재적 충돌 방지 및 주차 보조 기능을 제공합니다.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- end Single Service item -->
+		</div>
+		</div>
+		<!-- /END Service LEFT -->
+	
+		<!-- PHONE IMAGE -->
+		<div class="col-md-8 sm-m-top-40 sm-text-center">
+			<div class="service-img wow fadeIn">
+			
+				<img src="assets/images/model/Autopilot-Hero-Vision-Desktop.jpg" alt="Architect Img">
+			</div>
+		</div>
 	</div>
+
 </section><!-- Auto Pilot Section-->
 
 <!--Dual Motor Sections-->
 <section id="hello" class="modely">
-  <img src="assets/images/model/model-y.jpg" >
+  <img src="assets/images/model/Model-Y-Interior.jpg" >
   <br />
   <br />
   <br />
 	<div class="row">
 		<div class="main_blog_fashion"></div>
 		<div class="col-md-3"></div>
-		<div class="col-md-6">
+		<div class="feature_photo wow fadeInUp col-md-6">
 			<div class="col-md-4">  
-				<h2>운전자 중심의 디자인</h2>
+				<h2>운전자 중심의<br>디자인</h2>
 				<div class="pricing_btn m-top-40">
 	              <a href="/carbuild" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 	            </div>
 			</div>
 			<div class="col-md-8">  
-		   		<p>Tesla AWD는 더 나은 핸들링, 트랙션 및 안전성 컨트롤을 위해 두 개의 독립 전기 모터가 민첩하게 전면 및 후면 휠의 토크를 디지털로 제어합니다. Model Y는 비, 눈, 진흙 및 오프로드 노면에서도 높은 주행 퍼포먼스를 발휘합니다.</p>
+		   		<p>높은 좌석 위치와 낮은 대시보드 위치는 운전자에게 탁 트인 전방 도로 시야를 제공합니다. Model Y는 15인치 터치스크린, 몰입형 사운드 시스템 및 추가 헤드룸과 완벽한 스카이 뷰를 제공하는 확장형 완전 글래스 루프로 심플하고 깔끔한 인테리어를 제공합니다.</p>
 			</div>
 		</div>
 	</div>
@@ -295,6 +307,7 @@
 
 
 <!--Testimonial Section-->
+<div class="pricing_btn m-top-40" style="background-color: black;">
 <section id="testimonial" class="testimonial fix roomy-100">
     <div class="container">
         <div class="row">
@@ -306,34 +319,34 @@
                             <div class="col-sm-10 col-sm-offset-1">
 
                                 <div class="test_authour">
-                                    <img src="assets/images/model/Model-S-Specs-Hero-Desktop-LHD.jpg" alt="" />
-                                    <h6 class="m-top-20">Model S 제원</h6>
-                                    <h5><em>Model S Plaid</em> </h5>
+                                    <img src="assets/images/model/Model-Y-Specs.jpg" alt="" />
+                                    <h6 style="color:white;" class="m-top-20">Model Y 제원</h6>
+                                    <h5><em>Model Y Plaid</em> </h5>
                                 </div>
-                                <div class="center">
+                                <div class="text-white text-center">
 				            		<h5 class=" m-top-40">주행 가능 거리 (연비)</h5>
-	                                <p class=" m-top-40">483km (4.1km/kWh)</p>
-									<p class="separator_small"></p>
+	                                <p class=" m-top-40">448km (4.8km/kWh)</p>
+									<p class="separator_small2"></p>
 									
 									<h5 class=" m-top-40">쿼터 마일</h5>
 	                                <p class=" m-top-40">약 9.23초 @250 km/h 트랩 속도</p>
-									<p class="separator_small"></p>
+									<p class="separator_small2"></p>
 									
 									<h5 class=" m-top-40">최대출력</h5>
 	                                <p class=" m-top-40">1,020 hp</p>
-									<p class="separator_small"></p>
+									<p class="separator_small2"></p>
 									
 									<h5 class=" m-top-40">휠</h5>
-	                                <p class=" m-top-40">19인치 또는 21인치</p>
-									<p class="separator_small"></p>
+	                                <p class=" m-top-40">21인치</p>
+									<p class="separator_small2"></p>
 									
 									<h5 class=" m-top-40">적재공간</h5>
 	                                <p class=" m-top-40">793 L</p>
-									<p class="separator_small"></p>
+									<p class="separator_small2"></p>
 									
 									<h5 class=" m-top-40">중량</h5>
 	                                <p class=" m-top-40">2,160 kg</p>
-									<p class="separator_small"></p>
+									<p class="separator_small2"></p>
                                 </div>
                             </div>
                         </div>
@@ -342,29 +355,29 @@
 
                                 <div class="test_authour">
                                     <img src="assets/images/model/Model-S-Specs-Hero-Desktop-LHD.jpg" alt="" />
-                                    <h6 class="m-top-20">Model S 제원</h6>
-                                    <h5><em>Model S</em> </h5>
+                                    <h6 style="color:white;"  class="m-top-20">Model Y 제원</h6>
+                                    <h5><em>Model Y</em> </h5>
                                 </div>
-                                <div class="center">
+                                <div class="text-white text-center">
 				            		<h5 class=" m-top-40">주행 가능 거리 (연비)</h5>
 	                                <p class=" m-top-40">526km (4.5km/kWh)</p>
-									<p class="separator_small"></p>
+									<p class="separator_small2"></p>
 									
 									<h5 class=" m-top-40">최대출력</h5>
 	                                <p class=" m-top-40">670 hp</p>
-									<p class="separator_small"></p>
+									<p class="separator_small2"></p>
 									
 									<h5 class=" m-top-40">휠</h5>
 	                                <p class=" m-top-40">19인치 또는 21인치</p>
-									<p class="separator_small"></p>
+									<p class="separator_small2"></p>
 									
 									<h5 class=" m-top-40">적재공간</h5>
 	                                <p class=" m-top-40">793 L</p>
-									<p class="separator_small"></p>
+									<p class="separator_small2"></p>
 									
 									<h5 class=" m-top-40">중량</h5>
 	                                <p class=" m-top-40">2,070 kg</p>
-									<p class="separator_small"></p>
+									<p class="separator_small2"></p>
                                 </div>
                             </div>
                         </div>
@@ -387,6 +400,7 @@
     </div><!--End off container -->
 </section> <!--End off Testimonial section -->
 
+
 <!--About Sections-->
 <section id="feature" class="feature p-top-100">
 	<div class="container">
@@ -395,9 +409,8 @@
 			
 				<div class="col-md-3 m-top-10">
 				
-					<div class="feature_content wow fadeIn m-top-150">
-						<h3>Model S</h3>
-						
+					<div class="feature_content wow fadeIn m-top-50">
+						<h3 style="color:white;">Model Y</h3>
 						<div class="feature_btns m-top-30">
 							<a href="/carbuild" class="btn btn-default text-uppercase">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
 						</div>
@@ -406,7 +419,7 @@
 				<div class="col-md-9">
 					<div class="feature_photo wow fadeIn sm-m-top-40">
 						<div class="feature_img">
-							<img src="assets/images/model/Model-S-Order-Hero-Desktop-Mobile-Global.jpg">
+							<img src="assets/images/model/ModelY_Order_Hero.avif">
 						</div>
 					</div>
 				</div>
@@ -414,5 +427,6 @@
 		</div><!--End off row-->
 	</div><!--End off container -->
 </section>
+</div>
 
 </html>
